feat: add school logo and initialize JS setup for future Supabase usage

--- a/style/_mobile.scss
+++ b/style/_mobile.scss
@@ -16,16 +16,11 @@ body {
 
 /* HERO / IMAGE */
 .hero__image {
-  // PLACEHOLDER
   width: 250px;
-  height: 200px;
-  background-color: #1d4ed8;
-
   border-radius: 8px;
   display: block;
-  // height: auto;
+  height: auto;
   margin: 15px auto 15px auto;
-  // width: 100%;
 }
 
 /* INTRO / OPIS */
